--- a/Tabster.Data.csproj
+++ b/Tabster.Data.csproj
@@ -56,6 +56,7 @@
     <Compile Include="TabsterDocumentCollection.cs" />
     <Compile Include="TabsterDocumentException.cs" />
     <Compile Include="TabsterXmlDocument.cs" />
+    <Compile Include="Utilities\DateTimeUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tabster.Core\Tabster.Core.csproj">
