--- a/Tabster.Data.csproj
+++ b/Tabster.Data.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Processing\ITablatureFileImporter.cs" />
     <Compile Include="Processing\ITablatureImporter.cs" />
     <Compile Include="Processing\ITablatureTextImporter.cs" />
-    <Compile Include="Processing\ITablatureWebpageImporter.cs" />
+    <Compile Include="Processing\ITablatureWebImporter.cs" />
     <Compile Include="Processing\TablatureProcessorException.cs" />
     <Compile Include="Processing\TabsterDocumentProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
