--- a/Tabster.Data.csproj
+++ b/Tabster.Data.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Processing\TabsterDocumentProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TablatureDocument.cs" />
-    <Compile Include="TablatureFileException.cs" />
+    <Compile Include="TabsterFileException.cs" />
     <Compile Include="TablaturePlaylistDocument.cs" />
     <Compile Include="TabsterXmlDocument.cs" />
     <Compile Include="Utilities\BinaryStreamExtensions.cs" />
@@ -82,7 +82,9 @@
       <Name>Tabster.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="NewFolder1\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
