--- a/Tabster.Data.csproj
+++ b/Tabster.Data.csproj
@@ -55,7 +55,7 @@
     <Compile Include="ITablatureFile.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ITabsterDocument.cs" />
+    <Compile Include="Xml\ITabsterDocument.cs" />
     <Compile Include="Library\ITablatureLibraryItem.cs" />
     <Compile Include="Library\ITablatureFileLibrary.cs" />
     <Compile Include="Library\TablatureLibraryIndexFile.cs" />
@@ -69,10 +69,10 @@
     <Compile Include="Processing\TablatureProcessorException.cs" />
     <Compile Include="Processing\TabsterDocumentProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TablatureDocument.cs" />
+    <Compile Include="Xml\TablatureDocument.cs" />
     <Compile Include="TabsterFileException.cs" />
-    <Compile Include="TablaturePlaylistDocument.cs" />
-    <Compile Include="TabsterXmlDocument.cs" />
+    <Compile Include="Xml\TablaturePlaylistDocument.cs" />
+    <Compile Include="Xml\TabsterXmlDocument.cs" />
     <Compile Include="Utilities\BinaryStreamExtensions.cs" />
     <Compile Include="Utilities\DateTimeUtilities.cs" />
   </ItemGroup>
@@ -82,9 +82,7 @@
       <Name>Tabster.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
