--- a/Tabster.Data.csproj
+++ b/Tabster.Data.csproj
@@ -73,7 +73,7 @@
     <Compile Include="Processing\ITablatureTextImporter.cs" />
     <Compile Include="Processing\ITablatureWebImporter.cs" />
     <Compile Include="Processing\TablatureProcessorException.cs" />
-    <Compile Include="Processing\TabsterDocumentProcessor.cs" />
+    <Compile Include="Processing\TabsterFileProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Xml\TablatureDocument.cs" />
     <Compile Include="TabsterFileException.cs" />
