--- a/Tabster.Data.csproj
+++ b/Tabster.Data.csproj
@@ -58,12 +58,14 @@
     <Compile Include="ITablatureFile.cs" />
     <Compile Include="ITablaturePlaylist.cs" />
     <Compile Include="ITabsterFile.cs" />
+    <Compile Include="TabsterFileAttributes.cs" />
     <Compile Include="Library\TablatureFileLibrary.cs" />
     <Compile Include="Binary\TablatureBinaryFile.cs" />
     <Compile Include="Binary\TablaturePlaylistFile.cs" />
     <Compile Include="Binary\TabsterBinaryFileBase.cs" />
     <Compile Include="Binary\TabsterBinaryFileHeader.cs" />
     <Compile Include="ITabsterFileHeader.cs" />
+    <Compile Include="TabsterXmlFileConverter.cs" />
     <Compile Include="Xml\TabsterXmlFileHeader.cs" />
     <Compile Include="Library\ITablatureLibraryItem.cs" />
     <Compile Include="Library\TablatureLibraryItem.cs" />
