--- a/Tabster.Data.csproj
+++ b/Tabster.Data.csproj
@@ -53,12 +53,15 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="FileType.cs" />
-    <Compile Include="ILibraryFile.cs" />
     <Compile Include="ITablaturePlaylistFile.cs" />
     <Compile Include="ITablatureFile.cs" />
     <Compile Include="ITabsterFile.cs" />
+    <Compile Include="Library\LibraryItem.cs" />
+    <Compile Include="Library\PlaylistLibraryItem.cs" />
+    <Compile Include="Library\TabsterFileSystemLibrary.cs" />
+    <Compile Include="PlaylistItem.cs" />
     <Compile Include="TabsterFileAttributes.cs" />
-    <Compile Include="Library\TablatureFileLibrary.cs" />
+    <Compile Include="Library\TabsterLibraryBase.cs" />
     <Compile Include="Binary\TablatureBinaryFile.cs" />
     <Compile Include="Binary\TablaturePlaylistFile.cs" />
     <Compile Include="Binary\TabsterBinaryFileBase.cs" />
