--- a/Tabster.Data.csproj
+++ b/Tabster.Data.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompressionMode.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="FileType.cs" />
     <Compile Include="ITablaturePlaylistFile.cs" />
@@ -65,11 +66,9 @@
     <Compile Include="Binary\TablatureBinaryFile.cs" />
     <Compile Include="Binary\TablaturePlaylistFile.cs" />
     <Compile Include="Binary\TabsterBinaryFileBase.cs" />
-    <Compile Include="Binary\TabsterBinaryFileHeader.cs" />
-    <Compile Include="ITabsterFileHeader.cs" />
+    <Compile Include="TabsterFileHeader.cs" />
     <Compile Include="TabsterXmlFileConverter.cs" />
     <Compile Include="Xml\TabsterLibraryDocument.cs" />
-    <Compile Include="Xml\TabsterXmlFileHeader.cs" />
     <Compile Include="Library\TablatureLibraryItem.cs" />
     <Compile Include="Processing\ITablatureFileExporter.cs" />
     <Compile Include="Processing\ITablatureFileImporter.cs" />
