--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,13 @@
-version: 1.0.{build}
+version: 1.0.0.{build}
 os: Visual Studio 2015
 configuration: Release
 platform: Any CPU
+assembly_info:
+  patch: true
+  file: AssemblyInfo.*
+  assembly_version: '{version}'
+  assembly_file_version: '{version}'
+  assembly_informational_version: '{version}-$(APPVEYOR_REPO_COMMIT)'
 before_build:
 - ps: nuget restore
 build:
