--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.0.0.{build}
+version: 1.0.3.{build}
 os: Visual Studio 2015
 configuration: Release
 platform: Any CPU
@@ -12,9 +12,17 @@ before_build:
 - ps: nuget restore
 build:
   project: Tabster.Data.sln
+after_test:
+- ps: >-
+    .\nuget_pack.ps1
+artifacts:
+- path: '*.nupkg'
+  name: nuget_package
 deploy:
   provider: NuGet
   api_key:
     secure: QzhmxS67d/XC1o4iPuKUv4+m4DxLtf5xXivDgokPK3kkMRP586YrbNDWZIPF09+R
   skip_symbols: false
   artifact: /.*\.nupkg/
+  on:
+    branch: master
