--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.0.3.{build}
+version: 1.0.0.{build}
 os: Visual Studio 2015
 configuration: Release
 platform: Any CPU
@@ -19,10 +19,18 @@ artifacts:
 - path: '*.nupkg'
   name: nuget_package
 deploy:
-  provider: NuGet
-  api_key:
-    secure: QzhmxS67d/XC1o4iPuKUv4+m4DxLtf5xXivDgokPK3kkMRP586YrbNDWZIPF09+R
-  skip_symbols: false
-  artifact: nuget_package
-  on:
-    branch: master
+  - provider: NuGet
+    api_key:
+      secure: QzhmxS67d/XC1o4iPuKUv4+m4DxLtf5xXivDgokPK3kkMRP586YrbNDWZIPF09+R
+    skip_symbols: false
+    artifact: nuget_package
+    on:
+      branch: master
+  - provider: GitHub
+    auth_token:
+      secure: SD+1NPa8QJ8nAT9A4wsEog2pedpT8KaQebkDVB9mHbVze6nYABjcVzDa/5MXK0ZW
+    artifact: Tabster.Data.dll
+    draft: false
+    on:
+      branch: master
+      appveyor_repo_tag: true
